--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/img/logo_width.png">
+  <script src="assets/vendor/js/web-animations.min.js"></script>
 </head>
 <body>
   <app-root></app-root>
